--- a/app/src/main/res/layout/fragment_documentupload.xml
+++ b/app/src/main/res/layout/fragment_documentupload.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.DocumentuploadFragment">
 
@@ -61,65 +62,109 @@
             android:textColor="@color/gray"
             app:drawableStartCompat="@drawable/ic_next_process_gray" />
     </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:id="@+id/uploadpancard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@color/bg_gray">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload PAN Card"
+                    android:textStyle="bold"
+                    />
+
+                <ImageView
+                    android:id="@+id/panicon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_cloud_upload_24" />
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/uploadaadhaar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@color/bg_gray">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Aadhaar Card"
+                    android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/aadhaaricon"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_cloud_upload_24"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/uploadtmr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@color/bg_gray">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload TM /R Certificate \n(for manufacture)"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/tmricon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_cloud_upload_24" />
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/uploadgumas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@color/bg_gray">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload Gumasta / Anugyapti \ncertificate"
+                    android:textStyle="bold"
+                    />
+                <ImageView
+                    android:id="@+id/gumanuicon"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_cloud_upload_24"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
         
         
         
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upload PAN Card"
-            android:layout_marginTop="@dimen/_50sdp"
-            android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginRight="@dimen/_30sdp"
-            android:background="@color/bg_gray"
-            android:padding="@dimen/_10sdp"
-            android:textStyle="bold"
-            android:drawableEnd="@drawable/ic_baseline_cloud_upload_24"
-            />
 
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upload Adhaar Card"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginRight="@dimen/_30sdp"
-            android:background="@color/bg_gray"
-            android:padding="@dimen/_10sdp"
-            android:textStyle="bold"
-            android:drawableEnd="@drawable/ic_baseline_cloud_upload_24"
-            />
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upload TM /R Certificate(for manufacture)"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginRight="@dimen/_30sdp"
-            android:background="@color/bg_gray"
-            android:padding="@dimen/_10sdp"
-            android:textStyle="bold"
-            android:drawableEnd="@drawable/ic_baseline_cloud_upload_24"
-            />
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upload Gumasta / Anugyapti certificate"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginBottom="@dimen/_50sdp"
-            android:layout_marginRight="@dimen/_30sdp"
-            android:background="@color/bg_gray"
-            android:padding="@dimen/_10sdp"
-            android:textStyle="bold"
-            android:drawableEnd="@drawable/ic_baseline_cloud_upload_24"
-            />
 
 
 
