--- a/app/src/main/res/layout/activity_bulk_seller.xml
+++ b/app/src/main/res/layout/activity_bulk_seller.xml
@@ -4,26 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.Bulk_sellerActivity">
-
-
-
-
-
-
+    android:background="@color/white"
+    tools:context=".activity.BulkSellerActivity">
         <FrameLayout
             android:id="@+id/container"
             android:layout_marginTop="@dimen/_40sdp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-
-
-
-
-
-
-
 
 </RelativeLayout>
