--- a/app/src/main/res/layout/fragment_sub_category.xml
+++ b/app/src/main/res/layout/fragment_sub_category.xml
@@ -11,11 +11,13 @@
 
 
     <LinearLayout
+        android:id="@+id/linearslider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_5dp"
         android:layout_marginEnd="@dimen/dimen_5dp"
         android:layout_marginBottom="@dimen/dimen_5dp"
+        android:visibility="gone"
         android:orientation="vertical">
 
         <androidx.viewpager.widget.ViewPager
