--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -78,7 +78,7 @@
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textColor="@color/lightest_gray"
                     android:textAlignment="viewStart"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
             </RelativeLayout>
 
         </LinearLayout>
@@ -174,6 +174,7 @@
                     android:background="@color/light_grey" />
 
                 <TextView
+                    android:visibility="gone"
                     app:drawableEndCompat="@drawable/ic_right_arrow"
                     android:id="@+id/tvMenuOrders"
                     android:layout_width="match_parent"
@@ -197,6 +198,8 @@
                     app:drawableTint="@color/drawer_icon_color" />
 
                 <TextView
+                    android:visibility="gone"
+
                     app:drawableEndCompat="@drawable/ic_right_arrow"
                     android:id="@+id/tvMenuWalletHistory"
                     android:layout_width="match_parent"
@@ -220,6 +223,8 @@
                     app:drawableTint="@color/drawer_icon_color" />
 
                 <TextView
+                    android:visibility="gone"
+
                     app:drawableEndCompat="@drawable/ic_right_arrow"
                     android:id="@+id/tvMenuTransactionHistory"
                     android:layout_width="match_parent"
@@ -243,6 +248,8 @@
                     app:drawableTint="@color/drawer_icon_color" />
 
                 <TextView
+                    android:visibility="gone"
+
                     app:drawableEndCompat="@drawable/ic_right_arrow"
                     android:id="@+id/tvMenuChangePassword"
                     android:layout_width="match_parent"
@@ -266,6 +273,8 @@
                     app:drawableTint="@color/drawer_icon_color" />
 
                 <TextView
+                    android:visibility="gone"
+
                     app:drawableEndCompat="@drawable/ic_right_arrow"
                     android:id="@+id/tvMenuManageAddresses"
                     android:layout_width="match_parent"
@@ -289,6 +298,8 @@
                     app:drawableTint="@color/drawer_icon_color" />
 
                 <TextView
+                    android:visibility="gone"
+
                     app:drawableEndCompat="@drawable/ic_right_arrow"
                     android:id="@+id/tvMenuReferEarn"
                     android:layout_width="match_parent"
@@ -319,6 +330,8 @@
                 android:background="@color/light_grey" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuContactUs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -342,6 +355,8 @@
                 app:drawableTint="@color/drawer_icon_color" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuAboutUs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -365,6 +380,8 @@
                 app:drawableTint="@color/drawer_icon_color" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuRateUs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -388,6 +405,8 @@
                 app:drawableTint="@color/drawer_icon_color" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuShareApp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -411,6 +430,8 @@
                 app:drawableTint="@color/drawer_icon_color" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuFAQ"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -434,6 +455,8 @@
                 app:drawableTint="@color/drawer_icon_color" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuTermsConditions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -457,6 +480,8 @@
                 app:drawableTint="@color/drawer_icon_color" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuPrivacyPolicy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -480,6 +505,8 @@
                 app:drawableTint="@color/drawer_icon_color" />
 
             <TextView
+                android:visibility="gone"
+
                 android:id="@+id/tvMenuLogout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
