--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -185,6 +185,11 @@
 
                 </LinearLayout>
 
+
+
+
+
+
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
@@ -577,6 +582,24 @@
 
 
 
+                 <TextView
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:text="Rate us"
+                     android:layout_margin="@dimen/_10sdp"
+                     android:textColor="@color/black"
+                     />
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="72dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+
             </LinearLayout>
 
 
@@ -605,12 +628,12 @@
                         android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
                         android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
                         android:layout_marginEnd="@dimen/_10sdp"
                         android:layout_toStartOf="@+id/tvMore"
-                        android:textAlignment="viewStart"
                         android:text="@string/similar_product"
+                        android:textAlignment="viewStart"
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/_12ssp"
                         android:textStyle="bold" />
